--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,11 +31,19 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	-webkit-touch-callout:none;
+	-webkit-user-select: none;
+	-khtml-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 }
 
 ol, ul {
 	list-style: none;
 }
+
+
 
 blockquote, q {
 	quotes: none;
